--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=images,pycharm,visualstudio
 dataset/*
 !dataset/.gitkeep
+!dataset/train/.gitkeep
 
 
 .idea/
